--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="_20dp">20dp</dimen>
+    <dimen name="default_padding">16dp</dimen>
+    <dimen name="button_corner_radius">8dp</dimen>
+    <dimen name="card_corner_radius">8dp</dimen>
 </resources>
