--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="default_padding">16dp</dimen>
     <dimen name="button_corner_radius">8dp</dimen>
     <dimen name="card_corner_radius">8dp</dimen>
+    <dimen name="margin_default">24dp</dimen>
+    <dimen name="edittext_width">300dp</dimen>
 </resources>
