--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,14 +6,26 @@
         <item name="android:layout_margin">8dp</item>
         <item name="android:drawablePadding">8dp</item>
         <item name="iconGravity">textStart</item>
-        <item name="android:textColor">@color/button_text_color</item>
-        <item name="backgroundTint">@color/primary_color</item>
+        <item name="android:textColor">@color/button_text</item>
+        <item name="backgroundTint">@color/primary</item>
     </style>
+
     <style name="CalculatorButton" parent="Widget.MaterialComponents.Button">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="backgroundTint">@color/white</item>
+    </style>
+
+    <style name="ButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:textColor">@color/button_text</item>
+        <item name="backgroundTint">@color/primary</item>
+    </style>
+
+    <style name="EditTextStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@color/light_grey</item>
+        <item name="hintTextColor">@color/hint</item>
     </style>
 </resources>
