--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources>
     <style name="Theme.TopAcademy" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:windowBackground">@color/background_dark</item>
     </style>
