--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -1,157 +1,173 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_display"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/grey"
-        android:textSize="32sp"
-        android:gravity="end|center_vertical"
-        android:text="@string/placeholder"
-        android:padding="8dp" />
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="@string/calculator_title"
+        app:titleTextColor="@color/white"
+        app:background="?attr/colorPrimary" />
 
-    <GridLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnCount="4"
-        android:rowCount="5"
-        android:background="@color/light_grey">
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <Button
-            android:id="@+id/btn_clear"
-            style="@style/CalculatorButton"
-            android:text="@string/clear"
-            app:backgroundTint="@color/red"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+        <TextView
+            android:id="@+id/tv_display"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@color/grey"
+            android:textSize="32sp"
+            android:gravity="end|center_vertical"
+            android:text="@string/placeholder"
+            android:padding="8dp" />
 
-        <Button
-            android:id="@+id/btn_divide"
-            style="@style/CalculatorButton"
-            android:text="@string/divide"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:columnCount="4"
+            android:rowCount="5"
+            android:background="@color/light_grey">
 
-        <Button
-            android:id="@+id/btn_multiply"
-            style="@style/CalculatorButton"
-            android:text="@string/multiply"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_delete"
-            style="@style/CalculatorButton"
-            android:text="@string/delete"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_clear"
+                style="@style/CalculatorButton"
+                android:text="@string/clear"
+                app:backgroundTint="@color/red"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_7"
-            style="@style/CalculatorButton"
-            android:text="@string/seven"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_divide"
+                style="@style/CalculatorButton"
+                android:text="@string/divide"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_8"
-            style="@style/CalculatorButton"
-            android:text="@string/eight"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_multiply"
+                style="@style/CalculatorButton"
+                android:text="@string/multiply"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_9"
-            style="@style/CalculatorButton"
-            android:text="@string/nine"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_delete"
+                style="@style/CalculatorButton"
+                android:text="@string/delete"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_subtract"
-            style="@style/CalculatorButton"
-            android:text="@string/subtract"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_7"
+                style="@style/CalculatorButton"
+                android:text="@string/seven"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_4"
-            style="@style/CalculatorButton"
-            android:text="@string/four"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_8"
+                style="@style/CalculatorButton"
+                android:text="@string/eight"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_5"
-            style="@style/CalculatorButton"
-            android:text="@string/five"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_9"
+                style="@style/CalculatorButton"
+                android:text="@string/nine"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_6"
-            style="@style/CalculatorButton"
-            android:text="@string/six"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_subtract"
+                style="@style/CalculatorButton"
+                android:text="@string/subtract"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_add"
-            style="@style/CalculatorButton"
-            android:text="@string/add"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_4"
+                style="@style/CalculatorButton"
+                android:text="@string/four"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_1"
-            style="@style/CalculatorButton"
-            android:text="@string/one"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_5"
+                style="@style/CalculatorButton"
+                android:text="@string/five"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_2"
-            style="@style/CalculatorButton"
-            android:text="@string/two"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_6"
+                style="@style/CalculatorButton"
+                android:text="@string/six"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_3"
-            style="@style/CalculatorButton"
-            android:text="@string/three"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_add"
+                style="@style/CalculatorButton"
+                android:text="@string/add"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_equals"
-            style="@style/CalculatorButton"
-            android:text="@string/equals"
-            app:backgroundTint="@color/primary"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_1"
+                style="@style/CalculatorButton"
+                android:text="@string/one"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_0"
-            style="@style/CalculatorButton"
-            android:text="@string/zero"
-            android:layout_columnSpan="2"
-            android:layout_columnWeight="2"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_2"
+                style="@style/CalculatorButton"
+                android:text="@string/two"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-        <Button
-            android:id="@+id/btn_dot"
-            style="@style/CalculatorButton"
-            android:text="@string/dot"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1" />
+            <Button
+                android:id="@+id/btn_3"
+                style="@style/CalculatorButton"
+                android:text="@string/three"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
 
-    </GridLayout>
-</LinearLayout>
+            <Button
+                android:id="@+id/btn_equals"
+                style="@style/CalculatorButton"
+                android:text="@string/equals"
+                app:backgroundTint="@color/primary"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
+
+            <Button
+                android:id="@+id/btn_0"
+                style="@style/CalculatorButton"
+                android:text="@string/zero"
+                android:layout_columnSpan="2"
+                android:layout_columnWeight="2"
+                android:layout_rowWeight="1" />
+
+            <Button
+                android:id="@+id/btn_dot"
+                style="@style/CalculatorButton"
+                android:text="@string/dot"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1" />
+
+        </GridLayout>
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
