--- a/app/src/main/res/layout/activity_car_list.xml
+++ b/app/src/main/res/layout/activity_car_list.xml
@@ -10,12 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/weather_title"
         app:titleTextColor="@color/white"
         app:background="?attr/colorPrimary" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_weather"
+        android:id="@+id/rv_cars"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
