Task 5 + additions to task 4

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -42,6 +42,12 @@
             style="@style/HomeButtonStyle"
             android:text="@string/weather_title"
             app:icon="@drawable/ic_weather" />
+
+        <Button
+            android:id="@+id/btn_car_list"
+            style="@style/HomeButtonStyle"
+            android:text="@string/car_list_title"
+            app:icon="@drawable/ic_car" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
