--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="error">#FF5252</color>
     <color name="hint">#3C9419</color>
     <color name="button_text">#FFFFFF</color>
+
+    <color name="hot">#FF5722</color>
+    <color name="cold">#2196F3</color>
+    <color name="normal">#4CAF50</color>
 </resources>
