--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -1,21 +1,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?attr/colorSurface">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="@dimen/toolbar_height"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/calculator_title"
-        app:titleTextColor="@color/white"
-        app:background="?attr/colorPrimary" />
+        app:title="@string/title_calculator"
+        style="@style/ToolbarStyle" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/_0dp"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent">
@@ -23,151 +24,210 @@
         <TextView
             android:id="@+id/tv_display"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:background="@color/grey"
-            android:textSize="32sp"
+            android:layout_height="@dimen/display_height"
+            android:background="?attr/colorSurfaceVariant"
+            android:textColor="?attr/colorOnSurface"
+            android:textSize="@dimen/_48sp"
             android:gravity="end|center_vertical"
-            android:text="@string/placeholder"
-            android:padding="8dp" />
+            android:text="@string/calculator_display_default"
+            android:paddingStart="@dimen/_24dp"
+            android:paddingEnd="@dimen/_24dp"
+            android:singleLine="true"
+            android:ellipsize="end"
+            tools:text="12345.67" />
 
         <GridLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/_0dp"
+            android:layout_weight="1"
             android:columnCount="4"
             android:rowCount="5"
-            android:background="@color/light_grey">
-
+            android:background="?attr/colorSurfaceVariant"
+            android:padding="@dimen/_1dp"
+            android:alignmentMode="alignBounds"
+            android:columnOrderPreserved="false">
 
             <Button
                 android:id="@+id/btn_clear"
-                style="@style/CalculatorButton"
-                android:text="@string/clear"
-                app:backgroundTint="@color/red"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Special"
+                android:text="@string/calculator_btn_clear"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_divide"
-                style="@style/CalculatorButton"
-                android:text="@string/divide"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Operation"
+                android:text="@string/calculator_btn_divide"
+                android:layout_row="0"
+                android:layout_column="1"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_multiply"
-                style="@style/CalculatorButton"
-                android:text="@string/multiply"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Operation"
+                android:text="@string/calculator_btn_multiply"
+                android:layout_row="0"
+                android:layout_column="2"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_delete"
-                style="@style/CalculatorButton"
-                android:text="@string/delete"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Special"
+                android:text="@string/calculator_btn_delete"
+                android:layout_row="0"
+                android:layout_column="3"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_7"
-                style="@style/CalculatorButton"
-                android:text="@string/seven"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Number"
+                android:text="@string/calculator_btn_7"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_8"
-                style="@style/CalculatorButton"
-                android:text="@string/eight"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Number"
+                android:text="@string/calculator_btn_8"
+                android:layout_row="1"
+                android:layout_column="1"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_9"
-                style="@style/CalculatorButton"
-                android:text="@string/nine"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Number"
+                android:text="@string/calculator_btn_9"
+                android:layout_row="1"
+                android:layout_column="2"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_subtract"
-                style="@style/CalculatorButton"
-                android:text="@string/subtract"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Operation"
+                android:text="@string/calculator_btn_subtract"
+                android:layout_row="1"
+                android:layout_column="3"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_4"
-                style="@style/CalculatorButton"
-                android:text="@string/four"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Number"
+                android:text="@string/calculator_btn_4"
+                android:layout_row="2"
+                android:layout_column="0"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_5"
-                style="@style/CalculatorButton"
-                android:text="@string/five"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Number"
+                android:text="@string/calculator_btn_5"
+                android:layout_row="2"
+                android:layout_column="1"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_6"
-                style="@style/CalculatorButton"
-                android:text="@string/six"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Number"
+                android:text="@string/calculator_btn_6"
+                android:layout_row="2"
+                android:layout_column="2"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_add"
-                style="@style/CalculatorButton"
-                android:text="@string/add"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Operation"
+                android:text="@string/calculator_btn_add"
+                android:layout_row="2"
+                android:layout_column="3"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_1"
-                style="@style/CalculatorButton"
-                android:text="@string/one"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Number"
+                android:text="@string/calculator_btn_1"
+                android:layout_row="3"
+                android:layout_column="0"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_2"
-                style="@style/CalculatorButton"
-                android:text="@string/two"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Number"
+                android:text="@string/calculator_btn_2"
+                android:layout_row="3"
+                android:layout_column="1"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_3"
-                style="@style/CalculatorButton"
-                android:text="@string/three"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Number"
+                android:text="@string/calculator_btn_3"
+                android:layout_row="3"
+                android:layout_column="2"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_equals"
-                style="@style/CalculatorButton"
-                android:text="@string/equals"
-                app:backgroundTint="@color/primary"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
+                style="@style/CalculatorButton.Operation"
+                android:text="@string/calculator_btn_equals"
+                android:layout_row="3"
+                android:layout_column="3"
+                android:layout_rowSpan="2"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="2"
+                android:layout_columnWeight="1"/>
 
             <Button
                 android:id="@+id/btn_0"
-                style="@style/CalculatorButton"
-                android:text="@string/zero"
+                style="@style/CalculatorButton.Number"
+                android:text="@string/calculator_btn_0"
+                android:layout_row="4"
+                android:layout_column="0"
                 android:layout_columnSpan="2"
-                android:layout_columnWeight="2"
-                android:layout_rowWeight="1" />
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="2"/>
 
             <Button
                 android:id="@+id/btn_dot"
-                style="@style/CalculatorButton"
-                android:text="@string/dot"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1" />
-
+                style="@style/CalculatorButton.Number"
+                android:text="@string/calculator_btn_dot"
+                android:layout_row="4"
+                android:layout_column="2"
+                android:layout_gravity="fill"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
         </GridLayout>
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
