--- a/app/src/main/res/layout/activity_car_list.xml
+++ b/app/src/main/res/layout/activity_car_list.xml
@@ -8,16 +8,15 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="@dimen/toolbar_height"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="@color/white"
-        app:background="?attr/colorPrimary" />
+        app:title="@string/title_car_list"
+        style="@style/ToolbarStyle" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_cars"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/_0dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
