--- a/app/src/main/res/layout/item_car.xml
+++ b/app/src/main/res/layout/item_car.xml
@@ -4,40 +4,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/default_padding">
+    android:padding="@dimen/padding_default">
 
     <ImageView
         android:id="@+id/iv_car"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/_80dp"
+        android:layout_height="@dimen/_80dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/car_image" />
+        android:contentDescription="@string/content_car_image" />
 
     <TextView
         android:id="@+id/tv_brand_model"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/_0dp"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="@dimen/_18sp"
         app:layout_constraintStart_toEndOf="@id/iv_car"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp" />
+        android:layout_marginStart="@dimen/margin_small" />
 
     <TextView
         android:id="@+id/tv_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/_16sp"
         app:layout_constraintStart_toEndOf="@id/iv_car"
         app:layout_constraintTop_toBottomOf="@id/tv_brand_model"
-        android:layout_marginTop="4dp" />
+        android:layout_marginTop="@dimen/padding_tiny" />
 
     <TextView
         android:id="@+id/tv_cost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/_18sp"
+        android:textColor="@color/primary_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/primary" />
-
+        app:layout_constraintBottom_toBottomOf="@id/tv_brand_model" />
 </androidx.constraintlayout.widget.ConstraintLayout>
