--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -4,19 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="@dimen/default_padding">
+    android:padding="@dimen/padding_default">
 
     <TextView
         android:id="@+id/tv_item"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/_0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:textSize="16sp" />
+        android:textSize="@dimen/_16sp" />
 
     <ImageButton
         android:id="@+id/btn_delete"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/action_button_size_48dp"
+        android:layout_height="@dimen/action_button_size_48dp"
         android:src="@drawable/ic_delete"
-        android:contentDescription="@string/delete_item" />
+        android:contentDescription="@string/content_delete_item" />
 </LinearLayout>
