--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,34 @@
 <resources>
     <style name="Theme.TopAcademy" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Основные цвета -->
+        <item name="colorPrimary">@color/primary_500</item>
+        <item name="colorPrimaryVariant">@color/primary_variant_700</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorSecondary">@color/secondary_500</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorError">@color/error_400</item>
+        <item name="colorOnError">@color/white</item>
+
+        <!-- Фоны -->
         <item name="android:windowBackground">@color/background_dark</item>
+        <item name="backgroundColor">@color/background_dark</item>
+        <item name="colorSurface">@color/background_dark</item>
+        <item name="colorSurfaceVariant">@color/surface_dark</item>
+        <item name="colorOnSurface">@color/white</item>
+
+        <!-- Текст -->
+        <item name="android:textColorPrimary">@color/text_primary_dark</item>
+        <item name="android:textColorSecondary">@color/text_secondary_dark</item>
+
+        <!-- Компоненты -->
+        <item name="editTextStyle">@style/EditTextStyle.Dark</item>
+        <item name="buttonStyle">@style/ButtonStyle.Primary</item>
+        <item name="toolbarStyle">@style/ToolbarStyle</item>
+
+        <item name="colorOnSurfaceVariant">@color/white</item>
+        <item name="colorSecondaryContainer">@color/secondary_500</item>
+        <item name="colorOnSecondaryContainer">@color/white</item>
+        <item name="colorErrorContainer">@color/error_900</item>
+        <item name="colorOnErrorContainer">@color/white</item>
     </style>
 </resources>
