--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,35 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="HomeButtonStyle" parent="Widget.MaterialComponents.Button">
+    <!-- Базовые стили -->
+    <style name="BaseButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:minHeight">@dimen/action_button_size_48dp</item>
+        <item name="cornerRadius">@dimen/corner_radius_8dp</item>
+        <item name="android:layout_margin">@dimen/padding_small</item>
+    </style>
+
+    <!-- Кнопки -->
+    <style name="ButtonStyle.Primary" parent="BaseButton">
+        <item name="backgroundTint">@color/primary_500</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ButtonStyle.Secondary" parent="BaseButton">
+        <item name="backgroundTint">@color/secondary_500</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="ButtonStyle.Text" parent="BaseButton">
+        <item name="backgroundTint">@color/transparent</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:padding">0dp</item>
+    </style>
+
+    <!-- Поля ввода -->
+    <style name="EditTextStyle.Base" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@color/primary_500</item>
+        <item name="hintTextColor">@color/text_hint</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">8dp</item>
-        <item name="android:drawablePadding">8dp</item>
-        <item name="iconGravity">textStart</item>
-        <item name="android:textColor">@color/button_text</item>
-        <item name="backgroundTint">@color/primary</item>
     </style>
 
-    <style name="CalculatorButton" parent="Widget.MaterialComponents.Button">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">0dp</item>
-        <item name="android:textSize">24sp</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="backgroundTint">@color/white</item>
+    <style name="EditTextStyle.Light" parent="EditTextStyle.Base">
+        <item name="boxStrokeColor">@color/primary_500</item>
     </style>
 
-    <style name="ButtonStyle" parent="Widget.MaterialComponents.Button">
-        <item name="android:layout_marginTop">16dp</item>
-        <item name="android:textColor">@color/button_text</item>
-        <item name="backgroundTint">@color/primary</item>
+    <style name="EditTextStyle.Dark" parent="EditTextStyle.Base">
+        <item name="boxStrokeColor">@color/secondary_500</item>
     </style>
 
-    <style name="EditTextStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="boxStrokeColor">@color/light_grey</item>
-        <item name="hintTextColor">@color/hint</item>
+    <!-- Стили калькулятора -->
+    <style name="CalculatorButton.Base" parent="Widget.MaterialComponents.Button">
+        <item name="android:textSize">@dimen/_24sp</item>
+        <item name="android:elevation">@dimen/_1dp</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="cornerRadius">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:minWidth">0dp</item>
     </style>
 
+    <style name="CalculatorButton.Number" parent="CalculatorButton.Base">
+        <item name="android:textColor">?attr/colorOnSurface</item>
+        <item name="backgroundTint">?attr/colorSurface</item>
+    </style>
+
+    <style name="CalculatorButton.Operation" parent="CalculatorButton.Base">
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="backgroundTint">?attr/colorSecondary</item>
+    </style>
+
+    <style name="CalculatorButton.Special" parent="CalculatorButton.Base">
+        <item name="android:textColor">?attr/colorOnError</item>
+        <item name="backgroundTint">?attr/colorError</item>
+    </style>
+
+    <!-- Toolbar -->
     <style name="ToolbarStyle" parent="Widget.MaterialComponents.Toolbar.Primary">
         <item name="android:textColorPrimary">@color/white</item>
+        <item name="titleTextColor">@color/white</item>
+        <item name="android:background">@color/primary_500</item>
     </style>
 </resources>
