--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,31 @@
 <resources>
     <style name="Theme.TopAcademy" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/primary</item>
+        <!-- Основные цвета -->
+        <item name="colorPrimary">@color/primary_500</item>
+        <item name="colorPrimaryVariant">@color/primary_variant_700</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/secondary_500</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorError">@color/error_400</item>
+        <item name="colorOnError">@color/white</item>
+
+        <!-- Фоны -->
         <item name="android:windowBackground">@color/background_light</item>
-        <item name="editTextStyle">@style/EditTextStyle</item>
-        <item name="buttonStyle">@style/ButtonStyle</item>
+        <item name="backgroundColor">@color/background_light</item>
+        <item name="colorSurface">@color/surface_light</item>
+        <item name="colorSurfaceVariant">@color/surface_variant_light</item>
+        <item name="colorOnSurface">@color/text_primary_light</item>
+
+        <!-- Текст -->
+        <item name="android:textColorPrimary">@color/text_primary_light</item>
+        <item name="android:textColorSecondary">@color/text_secondary_light</item>
+
+        <!-- Компоненты -->
+        <item name="editTextStyle">@style/EditTextStyle.Light</item>
+        <item name="buttonStyle">@style/ButtonStyle.Primary</item>
+        <item name="toolbarStyle">@style/ToolbarStyle</item>
     </style>
+
 
     <style name="Theme.TopacAdemy_android" parent="Theme.TopAcademy" />
 </resources>
