--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="@dimen/padding_small">
+        android:padding="@dimen/padding_small"
+        android:layout_marginTop="@dimen/margin_default">
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/EditTextStyle.Base"
@@ -47,12 +48,13 @@
             style="@style/ButtonStyle.Primary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/action_update" />
+            android:text="@string/action_update"/>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_weather"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_0dp"
+        app:layout_constraintTop_toBottomOf="@id/input_container"
         app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
